* Fixed spawning entities not counting towards summoned entity count.
* Fix broken gamepad navigation after closing Powers menu while on a non-default tab.
* Removed hard-coded minimum values for HP/MP steal and damage return.
* Fixed "activate" message incorrectly showing in MenuPowers tooltips.
* Fix some cases where 'min' damage/absorb could be greater than the cooresponding 'max' value.

Game updates:

* Fireball and Ice Bolt scrolls now give the player a 10 second period in which their basic attacks (Swing, Shoot, Channel) are replaced with the scroll power.
* Fixed the naming of scroll damage as it appears in power description tooltips.

Translation updates:

* German (de) update (Wuzzy2)
* Scottish Gaelic (gd) update (GunChleoc)
* Indonesian (id) update (Kirim Saja)
* Italian (it) update (Riccardi Unix)
* Japanese (ja) update (Sato Hayato)
* Korean (ko) update (ks k, YooJin919)
* Polish (pl) update (Pawonashi)
* Chinese (zh) update (Issac Zhang)



Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones



Flare v1.13 (https://flarerpg.org/2022/01/31/flare-1-13/)

Engine features:

* Added additional requirement properties (requires_status, requires_item, etc) to enemy and NPC map objects. The properties now match what is available for map events.
* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
* Added optional 'fog-of-war' feature (r-a-cristian-93)
* Added support for multiple sets/loadouts of equipped items (r-a-cristian-93)
* Added random_status attribute to Events for setting/unsetting a random status from a list.
* Reworked gamepad handling using the SDL_GameController API.